--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_staggered_animations: ^1.1.1
   http: ^1.1.0
+  loading_animation_widget: ^1.2.0+4
+  shimmer_animation: ^2.1.0+1
   sidebarx: ^0.16.3
 
 dev_dependencies:
