--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_staggered_animations: ^1.1.1
+  google_fonts: ^6.1.0
   http: ^1.1.0
   loading_animation_widget: ^1.2.0+4
+  shared_preferences: ^2.2.2
   shimmer_animation: ^2.1.0+1
   sidebarx: ^0.16.3
 
